2006-1-12 Fixed numpy / numeric to use .dtype.char to keep in SYNC with numpy SVN

2006-1-11 Fixed setup.py for win32 build and added rc template to the MANIFEST.in

2006-1-10 Added xpdf distiller option. matplotlibrc ps.usedistiller can now be
            none, false, ghostscript, or xpdf. Validation checks for
            dependencies. This needs testing, but the xpdf option should produce
            the highest-quality output and small file sizes - DSD

2006-01-10 For the usetex option, backend_ps now does all the LaTeX work in the 
            os's temp directory - DSD

2006-1-10 Added checks for usetex dependencies. - DSD

=======================================================================
2006-1-9 Released 0.86

2006-1-4 Changed to support numpy (new name for scipy_core) - TEO

2006-1-4 Added Mark's scaled axes patch for shared axis

2005-12-28 Added Chris Barker's build_wxagg patch - JDH

2005-12-27 Altered numerix/scipy to support new scipy package
           structure - TEO
2005-12-20 Fixed Jame's Boyles date tick reversal problem - JDH

2005-12-20 Added Jouni's rc patch to support lists of keys to set on -
           JDH

2005-12-12 Updated pyparsing and mathtext for some speed enhancements
           (Thanks Paul McGuire) and minor fixes to scipy numerix and
           setuptools

2005-12-12 Matplotlib data is now installed as package_data in
           the matplotlib module.  This gets rid of checking the
           many possibilities in matplotlib._get_data_path() - CM

2005-12-11 Support for setuptools/pkg_resources to build and use
           matplotlib as an egg. Still allows matplotlib to exist
           using a traditional distutils install. - ADS

2005-12-03 Modified setup to build matplotlibrc based on compile time
           findings.  It will set numerix in the order of scipy,
           numarray, Numeric depending on which are founds, and
           backend as in preference order GTKAgg, WXAgg, TkAgg, GTK,
           Agg, PS
