@@ -1,5 +1,8 @@
 #!/usr/bin/env python
-
+"""
+Example: simple line plot.
+Show how to make and save a simple line plot with labels, title and grid
+"""
 from pylab import *
 
 t = arange(0.0, 1.0+0.01, 0.01)
